--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -13,6 +13,8 @@
 \usepackage{listings, jvlisting} % ソースコード
 \usepackage{amsthm} % 定理環境
 
+\usepackage{comment} % 追加
+
 %% =========================================
 %% 定理環境の設定
 %% =========================================
@@ -45,27 +47,27 @@
 %% ===============================================
 
 % 論文の年度と種類
-\paper{20XX 年度 卒業論文}% 学部生
+\paper{2023 年度 卒業論文}% 学部生
 %\paper{20XX 年度 修士論文}% 修士
 
 % 論文のタイトル
-\title{住井研究室の\\ステキな論文クラスファイルの使用例}
+\title{OCamlにおけるEmbedding by Unembedding}
 
 % 学籍番号と著者のお名前
-\author{X0XX1234 ラムダ 小太郎}
+\author{C0TB2512 類家 健永}
 
 % 著者の所属
 \institute{東北大学 工学部\\電気情報物理工学科}% 学部生
 %\institute{東北大学 大学院情報科学研究科\\情報基礎科学専攻}% 修士
 
 % 指導教員のお名前
-\supervisor{住井 英二郎 教授}% 指導教員
+\supervisor{松田 一孝 准教授}% 指導教員
 \subsupervisor{松田 一孝 准教授}% 論文指導教員(省略可)
 
 % 論文発表日時
-\date{20XX 年1月1日 \quad 23:00--23:30}
+\date{2023 年2月28日 \quad 23:00--23:30}
 % 発表場所
-\venue{電子情報システム・応物系1号館2階トイレ}
+\venue{電子情報システム・応物系3号館2階208}
 
 %% ===============================================
 %% ソースコードの設定
@@ -120,231 +122,329 @@
 
 \mainmatter% ここから本文
 
-\chapter{序論}
+\chapter{導入}
+領域特化言語は特定の問題を解決するために、その問題の領域に特化した言語である。特に他の言語のライブラリの形で実装された領域特化言語は埋め込み領域特化言語と呼ばれる。
+埋め込み領域特化言語はその実装方式から、他の言語のユーザーがホスト言語の機能やエコシステムを利用可能であるという利点がある。
+特に、バインディング機能は実装が面倒であるため、埋め込み領域特化言語の利点を得て実装することが望ましい。
+バインディング機能を埋め込むための方法として、HOASが挙げられる。HOASはバインディング機能をホスト言語の高階関数を利用して表現する。
+HOASはユーザが利用しやすい一方、双方向変換や漸増計算などの複雑な意味の言語を扱うことが難しい。\\
+　埋め込み領域特化言語の実装方式の1つにEmbedding by Unembedding（EbU）がある。EbUはユーザが扱いやすいHOASと環境管理システムを接続するフレームワークであり、双方向変換や漸増計算などの複雑な言語を表現可能にする。
+元のEbUはHaskellで実装されている。しかし、EbUはHaskellの型クラス、GADT、型族、高階多相などの高度な機能が用いられているため、他の関数型プログラミング言語での実装方式は明らかではなかった。\\
+　本研究ではOCamlにおけるEbUの実装方式を示す。OCamlはGADTを持つが、型族や型クラス、高階型オペレータを直接表現することができない。
+そのため、元のEbUでGADTを利用している箇所はそのままに、型族や型クラス、高階型オペレータを利用している箇所についてはmodule/functor機能を用いる。
+そして、双方向変換の例を通して、元のEbUと比較を行い、その有用性を評価する。\\
+　本研究は以下の貢献を行っている。
+\begin{itemize}
+  \item EbUをOCamlで実装するときの問題点の特定（3.1）
+  \item Haskellの高度な機能に頼らない、新しい実装方式の提案（3.3）
+  \item OCamlで実装されたEbUをユーザが扱いやすいように、利便性の高いAPIを提供（3.4）
+  \item 複雑な言語を用いたケーススタディを実施し、Haskellでの実装と同等の表現力を持つことを確認（4.2）
+\end{itemize}
+また、結論（6章）を述べる前に、関連研究（5章）について議論を行う。
+
 
 %% 参考文献は \cite{ID} とします（ID は refs.bib 内で文献につけた識別子）
 %% BibTeX の使い方などは各自調べて下さい。
-序論とか結論とか \cite{Pierce:TypeSystems}
+%% 序論とか結論とか \cite{Pierce:TypeSystems}
 
-\chapter{\TeX の簡単な使い方}
+\chapter{準備}
+本章では、EbUを実装するにあたり、その基礎となる知識の準備を行う。
+EbUはユーザーが扱うHOASフロントエンドと環境管理システムであるde Bruijn項バックエンド間の接着剤として機能する。
+したがって、本章ではHOAS、de Bruijn項、Embedding by Unembeddingについて説明する。\\
+　3.1節ではde Bruijn項を、3.2節ではHOASを、3.3節ではEmbedding by Unembeddingを扱う。
 
-\section{BNF の書き方の例}
-
-本節では、BNF によるプログラミング言語の構文の書き方を紹介する。
-構文木の書き方は一つというわけではないので、幾つかのバリエーションを紹介する。
-どの方法が良いと思うかは、個人の好みに依るところなので、好きなものを使えば良いと思う。
-
-まず、次の方法では、array 環境を使って、BNF を書いている。
-array 環境は数式環境中で表のようなものを書くときに使う。
-基本的に、table 環境と使い方は同じである。
-\[
-%% 空白を明示的に開けるときは "\," "\ " "~" "\quad" "\qquad" などを使う。
-%% 空白の幅は "\qquad" > "\quad" > "~" = "\ " > "\," の順で大きい。
-%% "~" と "\ " は空白の代わりに改行を許すかどうかの違い（"\ " だと改行される可能性がある）
-\begin{array}{rcl@{\qquad\qquad}r}
-  t & \Coloneqq & & \text{terms:} \\
-  & \mid & x & \text{variables} \\
-  & \mid & \lambda x.~t & \text{lambda abstraction} \\
-  & \mid & t_1~t_2 & \text{application} \\
-  & \mid & \TRUE & \text{true} \\
-  & \mid & \FALSE & \text{false} \\
-  & \mid & \IF~t_1~\THEN~t_2~\ELSE~t_3 & \text{if statement}
-\end{array}
-\]
-
-他にも、次のように、align 環境を使っても、似たようなものを書くことができる。
+\section{De Bruijn項}
+de Bruijn項は項の表現方法1つである。
+de Bruijn項は項に出現する変数を名前を介して参照するのではなく、束縛子を直接示すことで参照する。
+束縛子の指定には自然数が用いられ、変数は束縛子からの深さで表現される。\\
+　例えば、型無しλ計算では恒等関数をラムダ抽象を用いて$\lambda x.~x $
+と表現する。$\lambda x$は$x$を指している。したがって、恒等関数では$x$は深さが0であるため、de Bruijn項では
+$\lambda.~0 $と表現される。\\
+　変数が複数ある場合も同様である。$\lambda x.\lambda y.~x~(y~x)$は$\lambda.\lambda.~1~(0~1)$に対応する。\\
+　自由変数を含む項に対しては少し注意が必要である。例えば、関数適用の項は$x~y$と表現される。
+この項はラムダ抽象が含まれないため、そのままではde Bruijn項として表現できない。
+そこで、次の環境をあらかじめ与える。
 \begin{align}
-  t \Coloneqq & \tag*{terms:} \\
-  {}\mid{} & x \tag*{variables} \\
-  {}\mid{} & \lambda x.~t \tag*{lambda abstraction} \\
-  {}\mid{} & t_1~t_2 \tag*{application} \\
-  {}\mid{} & \TRUE \tag*{true} \\
-  {}\mid{} & \FALSE \tag*{false} \\
-  {}\mid{} & \IF~t_1~\THEN~t_2~\ELSE~t_3 \tag*{if statement}
+\begin{array}{rcl@{\qquad\qquad}r}\notag
+    \Gamma ~=~ x &\mapsto& 4 \\
+               y &\mapsto& 3 \\
+               z &\mapsto& 2 \\
+               a &\mapsto& 1 \\
+               b &\mapsto& 0
+\end{array}
 \end{align}
-array 環境を愚直に使う場合と比べて、式が中央揃えになるという点と、
-``variables'' とかの説明が右端に来ている点が違う。
-説明は tag* マクロで出しており、これはもともと式番号を指定するためのものなので、
-若干使い方がおかしい気もするが、まぁ、いいだろう。
-自分の好みの方を使うと良いだろう。
 
-BNF 全体を左揃えにしたいならば、次のように、flalign 環境を使うと良い。
-align 環境と違って、\verb|&| を余分に1つ付ける必要がある、ということに注意して欲しい（詳しくはソースコードを見よ）。
-\begin{flalign}
-  t \Coloneqq & & \tag*{terms:} \\ % & を余分に1つ付けること！
-  {}\mid{} & x \tag*{variables} \\
-  {}\mid{} & \lambda x.~t \tag*{lambda abstraction} \\
-  {}\mid{} & t_1~t_2 \tag*{application} \\
-  {}\mid{} & \TRUE \tag*{true} \\
-  {}\mid{} & \FALSE \tag*{false} \\
-  {}\mid{} & \IF~t_1~\THEN~t_2~\ELSE~t_3 \tag*{if statement}
-\end{flalign}
+　ラムダ抽象が含まれない項も、この環境に従って表現できる。関数適用の項は$4~3$と表現される。
+もちろん、自由変数と束縛変数を両方含む項も表現ができ、$\lambda w.~y~w$は$\lambda.~4~0$と表現される。
+ここで、$y$を示すインデックスが1つずれるが、これは束縛子の情報が環境に追加されたために発生する。
 
-\section{導出木の書き方の例}
+% 本節では、BNF によるプログラミング言語の構文の書き方を紹介する。
+% 構文木の書き方は一つというわけではないので、幾つかのバリエーションを紹介する。
+% どの方法が良いと思うかは、個人の好みに依るところなので、好きなものを使えば良いと思う。
 
-導出木の書き方も色々あるが、ここでは、bussproofs.sty を使った方法を紹介する。
-導出木は、手書きでも書きにくいが、\LaTeX だから書きやすいというわけでもなく、
-（使うパッケージにも依るが）そこそこの苦労は必要である。
-bussproofs.sty を除く多くの方法では、frac などをベースに「分数」で導出木を書く。
-bussproofs.sty はこれらとは全く異なるインタフェースであり、慣れれば比較的解りやすい。
-bussproofs.sty の動作は、（導出木を要素とする）スタックをイメージすると解りやすい。
-よく使うマクロは次の通り。
-\begin{itemize}
-\item \verb|\AxiomC{...}|：Axiom を push する（導出木では葉に相当）
-\item \verb|\UnaryInfC{...}|：スタックから部分導出木（仮定）を1つ pop して、
-  それを新たに作ったノード（結論）の子供にすることで、新たな部分導出木を作成し、push する。
-\item \verb|\BinaryInfC{...}|：スタックから部分導出木（仮定）を2つ pop して、
-  \verb|\UnaryInfC| と同様の動作を行う。
-\item \verb|\TrinaryInfC{...}|：スタックから部分導出木（仮定）を3つ pop して、
-  \verb|\UnaryInfC| と同様の動作を行う。
-\end{itemize}
+% まず、次の方法では、array 環境を使って、BNF を書いている。
+% array 環境は数式環境中で表のようなものを書くときに使う。
+% 基本的に、table 環境と使い方は同じである。
+% \[
+% %% 空白を明示的に開けるときは "\," "\ " "~" "\quad" "\qquad" などを使う。
+% %% 空白の幅は "\qquad" > "\quad" > "~" = "\ " > "\," の順で大きい。
+% %% "~" と "\ " は空白の代わりに改行を許すかどうかの違い（"\ " だと改行される可能性がある）
+% \begin{array}{rcl@{\qquad\qquad}r}
+%   t & \Coloneqq & & \text{terms:} \\
+%   & \mid & x & \text{variables} \\
+%   & \mid & \lambda x.~t & \text{lambda abstraction} \\
+%   & \mid & t_1~t_2 & \text{application} \\
+%   & \mid & \TRUE & \text{true} \\
+%   & \mid & \FALSE & \text{false} \\
+%   & \mid & \IF~t_1~\THEN~t_2~\ELSE~t_3 & \text{if statement}
+% \end{array}
+% \]
 
-実際の使い方は以下の通り。
+% 他にも、次のように、align 環境を使っても、似たようなものを書くことができる。
+% \begin{align}
+%   t \Coloneqq & \tag*{terms:} \\
+%   {}\mid{} & x \tag*{variables} \\
+%   {}\mid{} & \lambda x.~t \tag*{lambda abstraction} \\
+%   {}\mid{} & t_1~t_2 \tag*{application} \\
+%   {}\mid{} & \TRUE \tag*{true} \\
+%   {}\mid{} & \FALSE \tag*{false} \\
+%   {}\mid{} & \IF~t_1~\THEN~t_2~\ELSE~t_3 \tag*{if statement}
+% \end{align}
+% array 環境を愚直に使う場合と比べて、式が中央揃えになるという点と、
+% ``variables'' とかの説明が右端に来ている点が違う。
+% 説明は tag* マクロで出しており、これはもともと式番号を指定するためのものなので、
+% 若干使い方がおかしい気もするが、まぁ、いいだろう。
+% 自分の好みの方を使うと良いだろう。
 
-%% T-Var
-\begin{prooftree}
-  \AxiomC{$x:T \in \Gamma$}
-  \RightLabel{\textsc{T-Var}}
-  \UnaryInfC{$\Gamma \vdash x : T$}
-\end{prooftree}
-%% T-Abs
-\begin{prooftree}
-  \AxiomC{$\Gamma, x:T \vdash t : U$}
-  \RightLabel{\textsc{T-Abs}}
-  \UnaryInfC{$\Gamma \vdash \lambda x.~t : T \to U$}
-\end{prooftree}
-%% T-App
-\begin{prooftree}
-  \AxiomC{$\Gamma \vdash t_1 : T \to U$}
-  \AxiomC{$\Gamma \vdash t_2 : T$}
-  \RightLabel{\textsc{T-App}}
-  \BinaryInfC{$\Gamma \vdash t_1~t_2 : U$}
-\end{prooftree}
+% BNF 全体を左揃えにしたいならば、次のように、flalign 環境を使うと良い。
+% align 環境と違って、\verb|&| を余分に1つ付ける必要がある、ということに注意して欲しい（詳しくはソースコードを見よ）。
+% \begin{flalign}
+%   t \Coloneqq & & \tag*{terms:} \\ % & を余分に1つ付けること！
+%   {}\mid{} & x \tag*{variables} \\
+%   {}\mid{} & \lambda x.~t \tag*{lambda abstraction} \\
+%   {}\mid{} & t_1~t_2 \tag*{application} \\
+%   {}\mid{} & \TRUE \tag*{true} \\
+%   {}\mid{} & \FALSE \tag*{false} \\
+%   {}\mid{} & \IF~t_1~\THEN~t_2~\ELSE~t_3 \tag*{if statement}
+% \end{flalign}
 
-\begin{prooftree}
-  \AxiomC{}
-  \RightLabel{\textsc{T-True}}
-  \UnaryInfC{$x : \BOOL \to \BOOL \vdash \TRUE : \BOOL$}
-  \RightLabel{\textsc{T-Abs}}
-  \UnaryInfC{$\vdash \lambda x.~\TRUE : (\BOOL \to \BOOL) \to \BOOL$}
-  \AxiomC{$y : \BOOL \in y : \BOOL$}
-  \RightLabel{\textsc{T-Var}}
-  \UnaryInfC{$y : \BOOL \vdash y : \BOOL$}
-  \RightLabel{\textsc{T-Abs}}
-  \UnaryInfC{$\vdash \lambda y.~y : \BOOL \to \BOOL$}
-  \RightLabel{\textsc{T-App}}
-  \BinaryInfC{$\vdash (\lambda x.~\TRUE)~(\lambda y.~y) : \BOOL$}
-\end{prooftree}
+\section{HOAS}
+組み込みにおいてHOASは変数バインディングの表現方法の1つである。
+変数バインディングをホスト言語の関数で表す。
+HOASはゲスト言語の変数をホスト言語の関数で管理するため、ユーザーが変数の名前管理をする必要がない。
+また、ゲスト言語はホスト言語のエコシステムを得られるメリットがある。
+しかし、環境を操作する必要がある複雑なセマンティックについてはその実装が明らかではない。\\
+　HOASを利用した組み込み技術にtagless-final styleがある。
+tagless-final styleはshallow embeddingを改良した組み込み技術である。\\
+　例として、足し算言語$e~\Coloneqq~n~｜~e~+~e$を考える。
+shallow embeddingはゲスト言語の各コンストラクタをその意味に対応した関数で表す。足し算言語は
+\begin{align}
+lit~&::~Int \rightarrow Int \notag\\
+add~&::~Int \rightarrow Int \rightarrow Int \notag
+\end{align}
 
-\section{定理環境}
+で表される。\\
+　shallow embeddingはコンストラクタを増やすことに有利ではあるが、解釈を増やすことは不利である。
+tagless-final styleはshallow embeddingの利点はそのままに、解釈を増やすことに成功している。
+tagless-final styleでは、はじめにゲスト言語の式を
+\begin{align}
+&guestExp~::~(｛-lit-｝ Int \rightarrow a) \rightarrow (｛-add-｝ a \rightarrow a \rightarrow a) \rightarrow a \notag\\
+&guestExp~lit~add~=~add~(lit~3)~(add~(lit~4)~(lit~5)) \notag 
+\end{align}
 
-amsthm.styをカスタマイズした定理環境を使う。
+という多相型で表す。\\
+　多相型を用いることで、guestExpに適切な関数を代入することで構文木をたどらずに解釈を増やせる。
+例えば、$guestExp~id~(+)$とすることで通常の評価を行うことができ、$guestExp~show~(fun~n~m\rightarrow"("~++~n~++~"+"~++~m~++~")")$とすることで式の出力が可能となる。\\
+　tagless-final styleはHOASとしての利点もある。例として、型なしラムダ計算をHOASで表す。型なしラムダ計算はHOASで
+\begin{align}
+  data~Exp~&where \notag \\
+  App~&::~Exp \rightarrow Exp \rightarrow Exp \notag \\
+  Lam~&::~(Exp \rightarrow Exp) \rightarrow Exp \notag
+\end{align}
 
-\begin{theorem}[定理のタイトル]
-  定理の内容
-\end{theorem}
+と表される。しかし、この方法では式を解釈する関数の記述が難しい。
+例えば、$data~Val~=~VFun~(Val \rightarrow Val)$として、評価関数$eval~::~Exp \rightarrow Val$を定義する場合に評価の中で$Val \rightarrow Exp$という関数が必要となったり、元の計算体系で表現できない式を許すことがあったりする。
+tagless-final styleは、この問題を解決する手法でもある。同様の型なしラムダ計算において
+\begin{align}
+  class~Lam~e&~where \notag \\
+  app~&::~e \rightarrow e \rightarrow e \notag \\
+  lam~&::~(e \rightarrow e) \rightarrow e \notag
+\end{align}
 
-\begin{lemma}[補題のタイトル]
-  補題の内容
-\end{lemma}
+について、　
+\begin{align}
+  instance&~Lam~Val~where \notag \\
+  &app~(VFun~f)~x~=~f~x \notag \\
+  &lam~k~=~VFun~k \notag
+\end{align}
 
-\begin{corollary}[系のタイトル]
-  系の内容
-\end{corollary}
-
-\begin{proposition}[命題のタイトル]
-  命題の内容
-\end{proposition}
-
-\begin{definition}[定義のタイトル]
-  定義の内容
-\end{definition}
-
-\begin{example}[例のタイトル]
-  例の内容
-\end{example}
-
-\begin{assumption}[仮定のタイトル]
-  仮定の内容
-\end{assumption}
-
-\begin{axiom}[公理のタイトル]
-  公理の内容
-\end{axiom}
-
-\begin{proof}
-  証明の内容
-\end{proof}
-
-\subsection{定理環境の使い方の例}
-
-\begin{lemma}
-  \label{lem:interesting-lemma}
-  論文の中で最重要とは言えないような性質・命題は補題 (lemma) にする。
-  補題や定理から直ちに導けるような軽い命題は系 (corollary) にする（細かい使い分けは人による）。
-\end{lemma}
-
-\begin{proof}
-  \lstinline|proof*| のように、アスタリスク付きの環境では、番号が付かない。
-\end{proof}
-
-\begin{theorem}
-  \label{thm:wonderful-theorem}
-  提案手法の最も重要な性質や命題は、定理 (theorem) として書く。
-  読者の心をくすぐる興味深いステートメントを書こう。
-\end{theorem}
-
-\begin{proof}
-  定理 \ref{thm:wonderful-theorem} の華麗な証明。その美しい証明に、読者の目は釘付けだ！
-  \begin{enumerate}[leftmargin=0pt,itemindent=*,label=Case \arabic*.]
-  \item 自明
-  \item 補題 \ref{lem:interesting-lemma} から直ちに導ける。
-  \item 言うまでもない。目を瞑れば証明が見えてくる。
-  \item あんまり自明じゃない
-    \begin{enumerate}[label=(\roman*)]
-    \item 自明じゃないと思ったけど、やっぱり自明だった
-    \item ほらね、こんなに簡単
-    \end{enumerate}
-  \end{enumerate}
-\end{proof}
-
-\section{ソースコード}
-
-ソースコード\ref{src:listup_nodes}は二分木を深さ優先探索して、ノードを列挙する関数である。
-\begin{lstlisting}[caption=二分木のノードのリストアップ,label=src:listup_nodes]
-type 'a bin_tree =
-  | Leaf of 'a
-  | Node of 'a bin_tree * 'a bin_tree
-
-let rec listup_nodes = function
-  | Leaf x -> [x]
-  | Node (r, l) -> (listup_nodes r) @ (listup_nodes l)
-\end{lstlisting}
-
-余談ではあるが、我々の分野ではこういった参照が飛ばされるような（本文から完全に独立した）ソースコードは図として扱い、
-キャプションを下につける流儀が一般的だと思う。
-\footnote{ただし、擬似コードによるアルゴリズムの記述にはこのようなスタイルを用いる。}
+のようにして、評価関数を定義できる。\\
+　EbUはtagless-final styleとUnembeddingを組み合わせたフレームワークであるため、tagless-final styleは重要な技術である。
 
 
-\section{図}
+% 導出木の書き方も色々あるが、ここでは、bussproofs.sty を使った方法を紹介する。
+% 導出木は、手書きでも書きにくいが、\LaTeX だから書きやすいというわけでもなく、
+% （使うパッケージにも依るが）そこそこの苦労は必要である。
+% bussproofs.sty を除く多くの方法では、frac などをベースに「分数」で導出木を書く。
+% bussproofs.sty はこれらとは全く異なるインタフェースであり、慣れれば比較的解りやすい。
+% bussproofs.sty の動作は、（導出木を要素とする）スタックをイメージすると解りやすい。
+% よく使うマクロは次の通り。
+% \begin{itemize}
+% \item \verb|\AxiomC{...}|：Axiom を push する（導出木では葉に相当）
+% \item \verb|\UnaryInfC{...}|：スタックから部分導出木（仮定）を1つ pop して、
+%   それを新たに作ったノード（結論）の子供にすることで、新たな部分導出木を作成し、push する。
+% \item \verb|\BinaryInfC{...}|：スタックから部分導出木（仮定）を2つ pop して、
+%   \verb|\UnaryInfC| と同様の動作を行う。
+% \item \verb|\TrinaryInfC{...}|：スタックから部分導出木（仮定）を3つ pop して、
+%   \verb|\UnaryInfC| と同様の動作を行う。
+% \end{itemize}
 
-図の貼り方については、 docs/EPSIMAGES.md が推奨している |convert| ではなく、 graphicx から扱う手法が現代的だと思う。
-\footnote{
-もし graphicx が標準で入っていない場合は、 |tlmgr install graphicx| などでインストールすると良い。
-}
-図\ref{f:aaa}は dblp\_bibtex\_crossref である。
+% 実際の使い方は以下の通り。
+
+% %% T-Var
+% \begin{prooftree}
+%   \AxiomC{$x:T \in \Gamma$}
+%   \RightLabel{\textsc{T-Var}}
+%   \UnaryInfC{$\Gamma \vdash x : T$}
+% \end{prooftree}
+% %% T-Abs
+% \begin{prooftree}
+%   \AxiomC{$\Gamma, x:T \vdash t : U$}
+%   \RightLabel{\textsc{T-Abs}}
+%   \UnaryInfC{$\Gamma \vdash \lambda x.~t : T \to U$}
+% \end{prooftree}
+% %% T-App
+% \begin{prooftree}
+%   \AxiomC{$\Gamma \vdash t_1 : T \to U$}
+%   \AxiomC{$\Gamma \vdash t_2 : T$}
+%   \RightLabel{\textsc{T-App}}
+%   \BinaryInfC{$\Gamma \vdash t_1~t_2 : U$}
+% \end{prooftree}
+
+% \begin{prooftree}
+%   \AxiomC{}
+%   \RightLabel{\textsc{T-True}}
+%   \UnaryInfC{$x : \BOOL \to \BOOL \vdash \TRUE : \BOOL$}
+%   \RightLabel{\textsc{T-Abs}}
+%   \UnaryInfC{$\vdash \lambda x.~\TRUE : (\BOOL \to \BOOL) \to \BOOL$}
+%   \AxiomC{$y : \BOOL \in y : \BOOL$}
+%   \RightLabel{\textsc{T-Var}}
+%   \UnaryInfC{$y : \BOOL \vdash y : \BOOL$}
+%   \RightLabel{\textsc{T-Abs}}
+%   \UnaryInfC{$\vdash \lambda y.~y : \BOOL \to \BOOL$}
+%   \RightLabel{\textsc{T-App}}
+%   \BinaryInfC{$\vdash (\lambda x.~\TRUE)~(\lambda y.~y) : \BOOL$}
+% \end{prooftree}
+
+\section{Embedding by Unembedding}
+
+% amsthm.styをカスタマイズした定理環境を使う。
+
+% \begin{theorem}[定理のタイトル]
+%   定理の内容
+% \end{theorem}
+
+% \begin{lemma}[補題のタイトル]
+%   補題の内容
+% \end{lemma}
+
+% \begin{corollary}[系のタイトル]
+%   系の内容
+% \end{corollary}
+
+% \begin{proposition}[命題のタイトル]
+%   命題の内容
+% \end{proposition}
+
+% \begin{definition}[定義のタイトル]
+%   定義の内容
+% \end{definition}
+
+% \begin{example}[例のタイトル]
+%   例の内容
+% \end{example}
+
+% \begin{assumption}[仮定のタイトル]
+%   仮定の内容
+% \end{assumption}
+
+% \begin{axiom}[公理のタイトル]
+%   公理の内容
+% \end{axiom}
+
+% \begin{proof}
+%   証明の内容
+% \end{proof}
+
+% \subsection{定理環境の使い方の例}
+
+% \begin{lemma}
+%   \label{lem:interesting-lemma}
+%   論文の中で最重要とは言えないような性質・命題は補題 (lemma) にする。
+%   補題や定理から直ちに導けるような軽い命題は系 (corollary) にする（細かい使い分けは人による）。
+% \end{lemma}
+
+% \begin{proof}
+%   \lstinline|proof*| のように、アスタリスク付きの環境では、番号が付かない。
+% \end{proof}
+
+% \begin{theorem}
+%   \label{thm:wonderful-theorem}
+%   提案手法の最も重要な性質や命題は、定理 (theorem) として書く。
+%   読者の心をくすぐる興味深いステートメントを書こう。
+% \end{theorem}
+
+% \begin{proof}
+%   定理 \ref{thm:wonderful-theorem} の華麗な証明。その美しい証明に、読者の目は釘付けだ！
+%   \begin{enumerate}[leftmargin=0pt,itemindent=*,label=Case \arabic*.]
+%   \item 自明
+%   \item 補題 \ref{lem:interesting-lemma} から直ちに導ける。
+%   \item 言うまでもない。目を瞑れば証明が見えてくる。
+%   \item あんまり自明じゃない
+%     \begin{enumerate}[label=(\roman*)]
+%     \item 自明じゃないと思ったけど、やっぱり自明だった
+%     \item ほらね、こんなに簡単
+%     \end{enumerate}
+%   \end{enumerate}
+% \end{proof}
+
+% \section{ソースコード}
+
+% ソースコード\ref{src:listup_nodes}は二分木を深さ優先探索して、ノードを列挙する関数である。
+% \begin{lstlisting}[caption=二分木のノードのリストアップ,label=src:listup_nodes]
+% type 'a bin_tree =
+%   | Leaf of 'a
+%   | Node of 'a bin_tree * 'a bin_tree
+
+% let rec listup_nodes = function
+%   | Leaf x -> [x]
+%   | Node (r, l) -> (listup_nodes r) @ (listup_nodes l)
+% \end{lstlisting}
+
+% 余談ではあるが、我々の分野ではこういった参照が飛ばされるような（本文から完全に独立した）ソースコードは図として扱い、
+% キャプションを下につける流儀が一般的だと思う。
+% \footnote{ただし、擬似コードによるアルゴリズムの記述にはこのようなスタイルを用いる。}
+
+
+% \section{図}
+
+% 図の貼り方については、 docs/EPSIMAGES.md が推奨している |convert| ではなく、 graphicx から扱う手法が現代的だと思う。
 % \footnote{
-% ちなみに、初めて言及されたページのトップ（\url{https://chi2014.acm.org/templates/SIGCHIpaperformat.pdf}）か、
-% その次のページのトップ（\url{https://www.acm.org/binaries/content/assets/publications/taps/acm_layout_submission_template.pdf}
-% に貼り付けるのが慣例だと思う。
+% もし graphicx が標準で入っていない場合は、 |tlmgr install graphicx| などでインストールすると良い。
 % }
+% 図\ref{f:aaa}は dblp\_bibtex\_crossref である。
+% % \footnote{
+% % ちなみに、初めて言及されたページのトップ（\url{https://chi2014.acm.org/templates/SIGCHIpaperformat.pdf}）か、
+% % その次のページのトップ（\url{https://www.acm.org/binaries/content/assets/publications/taps/acm_layout_submission_template.pdf}
+% % に貼り付けるのが慣例だと思う。
+% % }
 
-\begin{figure}[t]
-  \centering
-  \includegraphics[width=.98\linewidth]{../docs/dblp_bibtex_crossref.png}
-\caption{試しに貼り付けられたdblp\_bibtex\_crossref}
-\label{f:aaa}
-\end{figure}
+% \begin{figure}[t]
+%   \centering
+%   \includegraphics[width=.98\linewidth]{../docs/dblp_bibtex_crossref.png}
+% \caption{試しに貼り付けられたdblp\_bibtex\_crossref}
+% \label{f:aaa}
+% \end{figure}
 
 \chapter{結論}
 
