--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -9,6 +9,8 @@
 %% ==>  title = {{OC}aml for Numerical Analysis}
 %%
 
+
+
 %%（これは DBLP ではなく，Pierce の Web ページから持ってきたもの）
 @book{Pierce:TypeSystems,
   author = {Benjamin C. Pierce},
@@ -20,4 +22,251 @@
   keys = {books},
   homepage = {http://www.cis.upenn.edu/~bcpierce/tapl},
   errata = {http://www.cis.upenn.edu/~bcpierce/tapl/errata.txt}
+}
+
+@article{matsuda2023embedding,
+  author       = {Kazutaka Matsuda and
+                  Samantha Frohlich and
+                  Meng Wang and
+                  Nicolas Wu},
+  title        = {Embedding by Unembedding},
+  journal      = {Proc. {ACM} Program. Lang.},
+  volume       = {7},
+  number       = {{ICFP}},
+  pages        = {1--47},
+  year         = {2023},
+  url          = {https://doi.org/10.1145/3607830},
+  doi          = {10.1145/3607830},
+  timestamp    = {Sun, 31 Dec 2023 00:00:00 +0100},
+  biburl       = {https://dblp.org/rec/journals/pacmpl/MatsudaFWW23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{heterogeneous_oleg,
+  title = {Typed heterogeneous collections: Lightweight HList},
+  author = {Kiselyov Oleg Evgenievich},
+  year = {2018},
+  note = {https://okmij.org/ftp/ML/index.html}
+}
+
+@article{CARETTE_KISELYOV_SHAN_2009,
+  author       = {Jacques Carette and
+                  Oleg Kiselyov and
+                  Chung{-}chieh Shan},
+  title        = {Finally tagless, partially evaluated: Tagless staged interpreters
+                  for simpler typed languages},
+  journal      = {J. Funct. Program.},
+  volume       = {19},
+  number       = {5},
+  pages        = {509--543},
+  year         = {2009},
+  url          = {https://doi.org/10.1017/S0956796809007205},
+  doi          = {10.1017/S0956796809007205},
+  timestamp    = {Sun, 02 Jun 2019 01:00:00 +0200},
+  biburl       = {https://dblp.org/rec/journals/jfp/CaretteKS09.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{YANG2004151,
+  author       = {Zhe Yang},
+  title        = {Encoding types in ML-like languages},
+  journal      = {Theor. Comput. Sci.},
+  volume       = {315},
+  number       = {1},
+  pages        = {151--190},
+  year         = {2004},
+  url          = {https://doi.org/10.1016/j.tcs.2003.11.017},
+  doi          = {10.1016/J.TCS.2003.11.017},
+  timestamp    = {Wed, 17 Feb 2021 00:00:00 +0100},
+  biburl       = {https://dblp.org/rec/journals/tcs/Yang04.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{ilc2014_Cai,
+  author       = {Yufei Cai and
+                  Paolo G. Giarrusso and
+                  Tillmann Rendel and
+                  Klaus Ostermann},
+  editor       = {Michael F. P. O'Boyle and
+                  Keshav Pingali},
+  title        = {A theory of changes for higher-order languages: incrementalizing {\(\lambda\)}-calculi
+                  by static differentiation},
+  booktitle    = {{ACM} {SIGPLAN} Conference on Programming Language Design and Implementation,
+                  {PLDI} '14, Edinburgh, United Kingdom - June 09 - 11, 2014},
+  pages        = {145--155},
+  publisher    = {{ACM}},
+  year         = {2014},
+  url          = {https://doi.org/10.1145/2594291.2594304},
+  doi          = {10.1145/2594291.2594304},
+  timestamp    = {Thu, 24 Jun 2021 16:19:30 +0200},
+  biburl       = {https://dblp.org/rec/conf/pldi/CaiGRO14.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{unembedding_atkey,
+  author       = {Robert Atkey and
+                  Sam Lindley and
+                  Jeremy Yallop},
+  editor       = {Stephanie Weirich},
+  title        = {Unembedding domain-specific languages},
+  booktitle    = {Proceedings of the 2nd {ACM} {SIGPLAN} Symposium on Haskell, Haskell
+                  2009, Edinburgh, Scotland, UK, 3 September 2009},
+  pages        = {37--48},
+  publisher    = {{ACM}},
+  year         = {2009},
+  url          = {https://doi.org/10.1145/1596638.1596644},
+  doi          = {10.1145/1596638.1596644},
+  timestamp    = {Sat, 30 Sep 2023 01:00:00 +0200},
+  biburl       = {https://dblp.org/rec/conf/haskell/AtkeyLY09.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{syntaxforfree_atkey,
+  author       = {Robert Atkey},
+  editor       = {Pierre{-}Louis Curien},
+  title        = {Syntax for Free: Representing Syntax with Binding Using Parametricity},
+  booktitle    = {Typed Lambda Calculi and Applications, 9th International Conference,
+                  {TLCA} 2009, Brasilia, Brazil, July 1-3, 2009. Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {5608},
+  pages        = {35--49},
+  publisher    = {Springer},
+  year         = {2009},
+  url          = {https://doi.org/10.1007/978-3-642-02273-9\_5},
+  doi          = {10.1007/978-3-642-02273-9\_5},
+  timestamp    = {Tue, 14 May 2019 10:00:41 +0200},
+  biburl       = {https://dblp.org/rec/conf/tlca/Atkey09.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Church_1940,
+  author       = {Alonzo Church},
+  title        = {A Formulation of the Simple Theory of Types},
+  journal      = {J. Symb. Log.},
+  volume       = {5},
+  number       = {2},
+  pages        = {56--68},
+  year         = {1940},
+  url          = {https://doi.org/10.2307/2266170},
+  doi          = {10.2307/2266170},
+  timestamp    = {Wed, 14 Nov 2018 00:00:00 +0100},
+  biburl       = {https://dblp.org/rec/journals/jsyml/Church40.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{huet_hoas,
+  author       = {G{\'{e}}rard P. Huet and
+                  Bernard Lang},
+  title        = {Proving and Applying Program Transformations Expressed with Second-Order
+                  Patterns},
+  journal      = {Acta Informatica},
+  volume       = {11},
+  pages        = {31--55},
+  year         = {1978},
+  url          = {https://doi.org/10.1007/BF00264598},
+  doi          = {10.1007/BF00264598},
+  timestamp    = {Sun, 21 Jun 2020 01:00:00 +0200},
+  biburl       = {https://dblp.org/rec/journals/acta/HuetL78.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{miller_hoas,
+  author       = {Dale Miller and
+                  Gopalan Nadathur},
+  title        = {A Logic Programming Approach to Manipulating Formulas and Programs},
+  booktitle    = {Proceedings of the 1987 Symposium on Logic Programming, San Francisco,
+                  California, USA, August 31 - September 4, 1987},
+  pages        = {379--388},
+  publisher    = {{IEEE-CS}},
+  year         = {1987},
+  timestamp    = {Sun, 12 Nov 2017 00:00:00 +0100},
+  biburl       = {https://dblp.org/rec/conf/slp/MillerN87.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{phenning_hoas,
+  author       = {Frank Pfenning and
+                  Conal Elliott},
+  editor       = {Richard L. Wexelblat},
+  title        = {Higher-Order Abstract Syntax},
+  booktitle    = {Proceedings of the {ACM} SIGPLAN'88 Conference on Programming Language
+                  Design and Implementation (PLDI), Atlanta, Georgia, USA, June 22-24,
+                  1988},
+  pages        = {199--208},
+  publisher    = {{ACM}},
+  year         = {1988},
+  url          = {https://doi.org/10.1145/53990.54010},
+  doi          = {10.1145/53990.54010},
+  timestamp    = {Fri, 09 Jul 2021 14:03:46 +0200},
+  biburl       = {https://dblp.org/rec/conf/pldi/PfenningE88.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{fstsnd_fiore,
+  author       = {Marcelo P. Fiore and
+                  Gordon D. Plotkin and
+                  Daniele Turi},
+  title        = {Abstract Syntax and Variable Binding},
+  booktitle    = {14th Annual {IEEE} Symposium on Logic in Computer Science, Trento,
+                  Italy, July 2-5, 1999},
+  pages        = {193--202},
+  publisher    = {{IEEE} Computer Society},
+  year         = {1999},
+  url          = {https://doi.org/10.1109/LICS.1999.782615},
+  doi          = {10.1109/LICS.1999.782615},
+  timestamp    = {Fri, 24 Mar 2023 00:00:00 +0100},
+  biburl       = {https://dblp.org/rec/conf/lics/FiorePT99.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{hkp_yallop,
+  author       = {Jeremy Yallop and
+                  Leo White},
+  editor       = {Michael Codish and
+                  Eijiro Sumii},
+  title        = {Lightweight Higher-Kinded Polymorphism},
+  booktitle    = {Functional and Logic Programming - 12th International Symposium, {FLOPS}
+                  2014, Kanazawa, Japan, June 4-6, 2014. Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {8475},
+  pages        = {119--135},
+  publisher    = {Springer},
+  year         = {2014},
+  url          = {https://doi.org/10.1007/978-3-319-07151-0\_8},
+  doi          = {10.1007/978-3-319-07151-0\_8},
+  timestamp    = {Tue, 14 May 2019 10:00:53 +0200},
+  biburl       = {https://dblp.org/rec/conf/flops/YallopW14.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{def_1,
+  author       = {John C. Reynolds},
+  editor       = {John J. Donovan and
+                  Rosemary Shields},
+  title        = {Definitional interpreters for higher-order programming languages},
+  booktitle    = {Proceedings of the {ACM} annual conference, {ACM} 1972, 1972, Volume
+                  2},
+  pages        = {717--740},
+  publisher    = {{ACM}},
+  year         = {1972},
+  url          = {https://doi.org/10.1145/800194.805852},
+  doi          = {10.1145/800194.805852},
+  timestamp    = {Tue, 13 Apr 2021 15:15:52 +0200},
+  biburl       = {https://dblp.org/rec/conf/acm/Reynolds72.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{def_2,
+  author       = {John C. Reynolds},
+  title        = {Definitional Interpreters for Higher-Order Programming Languages},
+  journal      = {High. Order Symb. Comput.},
+  volume       = {11},
+  number       = {4},
+  pages        = {363--397},
+  year         = {1998},
+  url          = {https://doi.org/10.1023/A:1010027404223},
+  doi          = {10.1023/A:1010027404223},
+  timestamp    = {Thu, 05 Mar 2020 12:05:02 +0100},
+  biburl       = {https://dblp.org/rec/journals/lisp/Reynolds98a.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
